--- a/home.css
+++ b/home.css
@@ -15,13 +15,13 @@
 .my-sidebar{
     color:white;
     margin-top: 70px;
-    margin-left: 30px;
     border-radius: 40px;
     height:80vh;
-    width: 80px; 
+    width: 5%; 
     padding: 8px; 
     background-color: #1E1B2F;
-    text-align: center;
+    text-align:justify;
+    margin-left: 0%;
 }
 
 
@@ -33,6 +33,7 @@
 .my-sidebar ul li{
   margin-right: 15px;
 line-height: 40px;
+
    
 }
 .my-sidebar ul li:hover{
